css/parser/tests/errors/percent/plus/output.stderr
error: Expected a property value
 --> $DIR/tests/errors/percent/plus/input.css:1:11
  |
1 | a { width: +0.%; }
  |           ^^^^^

